[gd_scene load_steps=4 format=2]

[ext_resource path="res://Towers/Spikes.gd" type="Script" id=1]
[ext_resource path="res://tiles_packed.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.0
height = 10.0

[node name="Spikes" type="Area2D"]
collision_layer = 2
collision_mask = 8
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -9 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 144, 54, 18, 18 )

[node name="Shape" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="DamageCooldown" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_Spikes_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Spikes_body_exited"]
[connection signal="timeout" from="DamageCooldown" to="." method="_on_DamageCooldown_timeout"]
